applications/prd/web-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-app-prd
  labels:
    name: web-app-prd
    environment: production
