applications/prd/web-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
  namespace: web-app-prd
spec:
  selector:
    app: web-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
